Fix stretched images

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,6 +63,7 @@ footer, header, hgroup, menu, nav, section {
 }
 
 a > img {
+	object-fit: cover;
 	height: 40vh;
 	width: 40vw;
 }
